--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -345,13 +345,13 @@
     "    video_list = get_course_videos(course_info)\n",
     "    write_watch_list(video_list[\"Value\"][\"Data\"])\n",
     "\n",
-    "# with concurrent.futures.ThreadPoolExecutor(max_workers=16) as executor:\n",
-    "#     for course_info in course_list[\"Value\"][\"Data\"]:\n",
-    "#         video_list = get_course_videos(course_info)\n",
-    "#         write_watch_list(video_list[\"Value\"][\"Data\"])\n",
-    "#         for video_info in video_list[\"Value\"][\"Data\"]:\n",
-    "#             future = executor.submit(download_video, video_info)\n",
-    "#             futures.append(future)"
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=16) as executor:\n",
+    "    for course_info in course_list[\"Value\"][\"Data\"]:\n",
+    "        video_list = get_course_videos(course_info)\n",
+    "        write_watch_list(video_list[\"Value\"][\"Data\"])\n",
+    "        for video_info in video_list[\"Value\"][\"Data\"]:\n",
+    "            future = executor.submit(download_video, video_info)\n",
+    "            futures.append(future)"
    ]
   }
  ],
