upd config format

--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import yaml\n",
+    "import ruamel.yaml\n",
     "import os\n",
     "import requests\n",
     "import time\n",
@@ -16,67 +16,14 @@
     "import aria2p\n",
     "import tkinter as tk\n",
     "from tkinter import simpledialog\n",
-    "import concurrent.futures"
+    "import concurrent.futures\n",
+    "\n",
+    "yaml = ruamel.yaml.YAML()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 读取配置文件\n",
-    "with open('config.yaml', 'r', encoding='utf-8') as f:\n",
-    "    config = yaml.safe_load(f)\n",
-    "\n",
-    "# 从配置文件中获取Aria2设置\n",
-    "aria2_host = config.get('aria2_host', 'http://localhost')\n",
-    "aria2_port = config.get('aria2_port', 6800)\n",
-    "aria2_secret = config.get('aria2_secret', '')\n",
-    "aria2 = aria2p.API(aria2p.Client(host=aria2_host, port=aria2_port, secret=aria2_secret))\n",
-    "\n",
-    "# 从配置文件中获取base_dir\n",
-    "base_dir = config.get('base_dir')\n",
-    "\n",
-    "# 从配置文件中获取PowerCreatorCMSAuthenticationID和platform_token\n",
-    "PowerCreatorCMSAuthenticationID = config.get('PowerCreatorCMSAuthenticationID')\n",
-    "platform_token = config.get('platform_token')\n",
-    "\n",
-    "base_urls = {\n",
-    "    \"in\": config.get('base_urls_in'),\n",
-    "    \"out\": config.get('base_urls_out')\n",
-    "}\n",
-    "\n",
-    "website = config.get('website_url')\n",
-    "\n",
-    "# 如果PowerCreatorCMSAuthenticationID或platform_token未设置,则提示用户输入\n",
-    "if not PowerCreatorCMSAuthenticationID:\n",
-    "    PowerCreatorCMSAuthenticationID = input(\"请输入PowerCreatorCMSAuthenticationID: \")\n",
-    "\n",
-    "if not platform_token:\n",
-    "    platform_token = input(\"请输入platform_token: \")\n",
-    "\n",
-    "# 保存到cookies.txt\n",
-    "cookies = {\n",
-    "    \"PowerCreatorCMSAuthenticationID\": PowerCreatorCMSAuthenticationID,\n",
-    "    \"platform_token\": platform_token\n",
-    "}\n",
-    "with open(\"cookies.txt\", \"w\") as f:\n",
-    "    json.dump(cookies, f)\n",
-    "\n",
-    "\n",
-    "def load_cookies():\n",
-    "    if os.path.exists(\"cookies.txt\"):\n",
-    "        with open(\"cookies.txt\", \"r\") as f:\n",
-    "            cookies = json.load(f)\n",
-    "        return cookies\n",
-    "    else:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,26 +43,33 @@
     "        j = j // 10\n",
     "    return token\n",
     "\n",
-    "get_csrf_token()\n",
-    "def load_cookies():\n",
-    "    if os.path.exists(\"cookies.txt\"):\n",
-    "        with open(\"cookies.txt\", \"r\") as f:\n",
-    "            cookies = json.load(f)\n",
-    "        return cookies\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
     "def check_login(session):\n",
     "    url = \"https://buct.smartclass.cn/Permission/DataBoardPageList?csrkToken=\" + get_csrf_token()\n",
-    "    response = session.get(url)\n",
-    "    if response.status_code == 200 and \"登录\" not in response.text:\n",
-    "        print(\"Login successful using saved cookies.\")\n",
+    "    response = session.get(url, allow_redirects=False)\n",
+    "    if response.status_code == 200:\n",
     "        return True\n",
     "    else:\n",
     "        print(\"Login failed using saved cookies.\")\n",
-    "        print(response.text)\n",
     "        print(response.status_code)\n",
     "        return False\n",
+    "\n",
+    "def load_cookies():\n",
+    "    cookies = {\n",
+    "        \"PowerCreatorCMSAuthenticationID\": PowerCreatorCMSAuthenticationID,\n",
+    "        \"platform_token\": platform_token\n",
+    "    }\n",
+    "    return cookies\n",
+    "\n",
+    "def save_cookies_to_yaml(session):\n",
+    "    cookies = session.cookies.get_dict()\n",
+    "    with open('config.yaml', 'r', encoding='utf-8') as f:\n",
+    "        config = yaml.load(f)\n",
+    "\n",
+    "    config[\"authorization\"][\"PowerCreatorCMSAuthenticationID\"] = cookies[\"PowerCreatorCMSAuthenticationID\"]\n",
+    "    config[\"authorization\"][\"platform_token\"] = cookies[\"platform_token\"]\n",
+    "\n",
+    "    with open('config.yaml', 'w', encoding='utf-8') as f:\n",
+    "        yaml.dump(config, f)\n",
     "\n",
     "def login():\n",
     "    session = requests.Session()\n",
@@ -149,8 +103,8 @@
     "\n",
     "    url = \"https://buct.smartclass.cn/Home/Login\"\n",
     "    data = {\n",
-    "        \"UserName\": \"\",\n",
-    "        \"PassWord\": \"\",\n",
+    "        \"UserName\": username,\n",
+    "        \"PassWord\": password,\n",
     "        \"isRember\": \"true\",\n",
     "        \"VerifyCode\": code,\n",
     "        \"VerifyCodeId\": verfycode,\n",
@@ -158,23 +112,101 @@
     "    }\n",
     "    response = session.post(url, data=data)\n",
     "    print(response.text)\n",
-    "    print(response.cookies.get_dict())\n",
-    "    if check_login(session):\n",
-    "        print(session.cookies.get_dict())\n",
+    "    # 检查登录是否成功\n",
+    "    response_data = json.loads(response.text)\n",
+    "    if response_data.get(\"Success\"):\n",
     "        print(\"Login successful.\")\n",
-    "        cookies = response.cookies.get_dict()\n",
-    "        with open(\"cookies.txt\", \"w\") as f:\n",
-    "            json.dump(cookies, f)\n",
-    "        # save to yaml\n",
-    "        config[\"PowerCreatorCMSAuthenticationID\"] = cookies[\"PowerCreatorCMSAuthenticationID\"]\n",
-    "        config[\"platform_token\"] = cookies[\"platform_token\"]\n",
-    "        with open('config.yaml', 'w', encoding='utf-8') as f:\n",
-    "            yaml.dump(config, f, default_flow_style=False, allow_unicode=True)\n",
-    "        return session\n",
+    "        save_cookies_to_yaml(session)\n",
+    "        return True\n",
     "    else:\n",
     "        print(\"Login failed.\")\n",
-    "        return None\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Login successful using saved cookies.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 读取配置文件\n",
+    "with open('config.yaml', 'r', encoding='utf-8') as f:\n",
+    "    config = yaml.load(f)\n",
+    "# 从配置文件中获取授权信息\n",
+    "authorization = config.get('authorization', {})\n",
+    "PowerCreatorCMSAuthenticationID = authorization.get('PowerCreatorCMSAuthenticationID')\n",
+    "platform_token = authorization.get('platform_token')\n",
+    "username = authorization.get('username')\n",
+    "password = authorization.get('password')\n",
     "\n",
+    "# 从配置文件中获取Aria2设置\n",
+    "downloader = config.get('downloader', {})\n",
+    "aria2_host = downloader.get('aria2_host', 'http://localhost')\n",
+    "aria2_port = downloader.get('aria2_port', 6800)\n",
+    "aria2_secret = downloader.get('aria2_secret', '')\n",
+    "aria2 = aria2p.API(aria2p.Client(host=aria2_host, port=aria2_port, secret=aria2_secret))\n",
+    "\n",
+    "# 从配置文件中获取base_dir\n",
+    "base_dir = downloader.get('base_dir')\n",
+    "\n",
+    "# 从配置文件中获取预览相关信息\n",
+    "priview = config.get('priview', {})\n",
+    "website = priview.get('website_url')\n",
+    "base_urls = {\n",
+    "    \"in\": priview.get('base_urls_in'),\n",
+    "    \"out\": priview.get('base_urls_out')\n",
+    "}\n",
+    "\n",
+    "# 如果PowerCreatorCMSAuthenticationID和platform_token都设置，则不需要账号密码\n",
+    "if PowerCreatorCMSAuthenticationID and platform_token:\n",
+    "    pass\n",
+    "# 如果有账号密码，没有token和id，也可以\n",
+    "elif username and password:\n",
+    "    pass\n",
+    "# 如果都没有，让用户选择输入哪对\n",
+    "else:\n",
+    "    print(\"请选择输入方式：\")\n",
+    "    print(\"1. 输入PowerCreatorCMSAuthenticationID和platform_token\")\n",
+    "    print(\"2. 输入账号和密码\")\n",
+    "    choice = input(\"请输入选择（1或2）: \")\n",
+    "    \n",
+    "    if choice == \"1\":\n",
+    "        print(\"提示：PowerCreatorCMSAuthenticationID和platform_token可以用F12查看，但是临时的，会过期。\")\n",
+    "        PowerCreatorCMSAuthenticationID = input(\"请输入PowerCreatorCMSAuthenticationID: \")\n",
+    "        config['authorization']['PowerCreatorCMSAuthenticationID'] = PowerCreatorCMSAuthenticationID\n",
+    "        platform_token = input(\"请输入platform_token: \")\n",
+    "        config['authorization']['platform_token'] = platform_token\n",
+    "    elif choice == \"2\":\n",
+    "        print(\"提示：账号和密码需要通过抓包浏览器登录的请求获取。\")\n",
+    "        username = input(\"请输入加密后的用户名: \")\n",
+    "        config['authorization']['username'] = username\n",
+    "        password = input(\"请输入加密后的密码: \")\n",
+    "        config['authorization']['password'] = password\n",
+    "    else:\n",
+    "        print(\"无效的选择，请重新运行程序。\")\n",
+    "        exit()\n",
+    "\n",
+    "    with open('config.yaml', 'w', encoding='utf-8') as f:\n",
+    "        yaml.dump(config, f)\n",
+    "\n",
+    "# 登录\n",
+    "session = login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_course_list():\n",
     "    token = get_csrf_token()\n",
     "    url = f\"https://buct.smartclass.cn/WebApi/V1/video/GetCourseLists?csrkToken={token}&schoolId=289&order=&sort=StartTime&Source=&IsDeleted=false&IsProcessSuccess=&IsProcessing=&IsNeedLive=&CollectorID=&ViewerID=&IsPublic=&IsPublish=true&stopDate=&startDate=&ClassroomID=&CourseID=&organizationID=&StudentID=13248246&TeacherID=&NodeID=&titleKey=&pageNumber=1&pageSize=100&GradeID=&attribute=&type=0&ActivityID=\"\n",
@@ -325,20 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Login successful using saved cookies.\n",
-      "Login successful using saved cookies.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "session = login()\n",
     "course_list = get_course_list()\n",
     "futures = []\n",
     "for course_info in course_list[\"Value\"][\"Data\"]:\n",
