Better file paths in haiku.ipynb

--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -321,7 +321,7 @@
     "def write_watch_list(video_infos):\n",
     "    title = video_infos[0][\"Title\"]\n",
     "    path = title.split(\" \")[0] + \"-\" + title.split(\" \")[1]\n",
-    "    with open(os.path.join(base_dir, path, title.split(\" \")[0] + \".md\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    with open(os.path.join(base_dir, path, path + \".md\"), \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(\"| StartTime | Video1 | VGA | Video1 | VGA |\\n\")\n",
     "        f.write(\"| --- | --- | --- | --- | --- |\\n\")\n",
     "        for video_info in video_infos:\n",
@@ -336,7 +336,7 @@
     "            base_url = website\n",
     "            f.write(f\"| {start_time} | [Video1]({base_url}?video={video1_in_url}&subtitle={subtitle_in_url}) | [VGA]({base_url}?video={vga_in_url}&subtitle={subtitle_in_url}) | [Video1]({base_url}?video={video1_out_url}&subtitle={subtitle_out_url}) | [VGA]({base_url}?video={vga_out_url}&subtitle={subtitle_out_url}) |\\n\")\n",
     "\n",
-    "    with open(os.path.join(base_dir, path, \"index.html\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    with open(os.path.join(base_dir, path, path + \".html\"), \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(\"<html><head><title>Watch List</title></head><body>\")\n",
     "        f.write(\"<table>\")\n",
     "        f.write(\"<tr><th>StartTime</th><th>Video1</th><th>VGA</th><th>Video1</th><th>VGA</th></tr>\")\n",
