fix some edge case of url encode

--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -17,6 +17,7 @@
     "import tkinter as tk\n",
     "from tkinter import simpledialog\n",
     "import concurrent.futures\n",
+    "import urllib\n",
     "\n",
     "yaml = ruamel.yaml.YAML()"
    ]
@@ -117,10 +118,10 @@
     "    if response_data.get(\"Success\"):\n",
     "        print(\"Login successful.\")\n",
     "        save_cookies_to_yaml(session)\n",
-    "        return True\n",
+    "        return session\n",
     "    else:\n",
     "        print(\"Login failed.\")\n",
-    "        return False\n"
+    "        return login()\n"
    ]
   },
   {
@@ -321,36 +322,37 @@
     "def write_watch_list(video_infos):\n",
     "    title = video_infos[0][\"Title\"]\n",
     "    path = title.split(\" \")[0] + \"-\" + title.split(\" \")[1]\n",
+    "    \n",
+    "    def format_url(video_type, in_out, start_time):\n",
+    "        video_url = urllib.parse.quote(f\"{base_urls[in_out]}/{path}/{start_time}.{video_type}.mp4\")\n",
+    "        subtitle_url = urllib.parse.quote(f\"{base_urls[in_out]}/{path}/{start_time}.Video1.json\")\n",
+    "        return f\"{website}?video={video_url}&subtitle={subtitle_url}\"\n",
+    "\n",
+    "    def write_table_row(f, start_time, file_type):\n",
+    "        video1_in_url = format_url(\"Video1\", \"in\", start_time)\n",
+    "        vga_in_url = format_url(\"VGA\", \"in\", start_time)\n",
+    "        video1_out_url = format_url(\"Video1\", \"out\", start_time)\n",
+    "        vga_out_url = format_url(\"VGA\", \"out\", start_time)\n",
+    "        \n",
+    "        if file_type == \"md\":\n",
+    "            f.write(f\"| {start_time} | [Video1]({video1_in_url}) | [VGA]({vga_in_url}) | [Video1]({video1_out_url}) | [VGA]({vga_out_url}) |\\n\")\n",
+    "        else:\n",
+    "            f.write(f\"<tr><td>{start_time}</td><td><a href='{video1_in_url}' target='_blank'>Video1</a></td><td><a href='{vga_in_url}' target='_blank'>VGA</a></td><td><a href='{video1_out_url}' target='_blank'>Video1</a></td><td><a href='{vga_out_url}' target='_blank'>VGA</a></td></tr>\\n\")\n",
+    "\n",
     "    with open(os.path.join(base_dir, path, path + \".md\"), \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(\"| StartTime | Video1 | VGA | Video1 | VGA |\\n\")\n",
     "        f.write(\"| --- | --- | --- | --- | --- |\\n\")\n",
     "        for video_info in video_infos:\n",
-    "            start_time = video_info[\"StartTime\"]\n",
-    "            start_time = start_time.replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
-    "            vga_in_url = f\"{base_urls['in']}/{path}/{start_time}_VGA.mp4\"\n",
-    "            video1_in_url = f\"{base_urls['in']}/{path}/{start_time}.Video1.mp4\"\n",
-    "            vga_out_url = f\"{base_urls['out']}/{path}/{start_time}_VGA.mp4\"\n",
-    "            video1_out_url = f\"{base_urls['out']}/{path}/{start_time}.Video1.mp4\"\n",
-    "            subtitle_in_url = f\"{base_urls['in']}/{path}/{start_time}.Video1.json\"\n",
-    "            subtitle_out_url = f\"{base_urls['out']}/{path}/{start_time}.Video1.json\"\n",
-    "            base_url = website\n",
-    "            f.write(f\"| {start_time} | [Video1]({base_url}?video={video1_in_url}&subtitle={subtitle_in_url}) | [VGA]({base_url}?video={vga_in_url}&subtitle={subtitle_in_url}) | [Video1]({base_url}?video={video1_out_url}&subtitle={subtitle_out_url}) | [VGA]({base_url}?video={vga_out_url}&subtitle={subtitle_out_url}) |\\n\")\n",
+    "            start_time = video_info[\"StartTime\"].replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
+    "            write_table_row(f, start_time, \"md\")\n",
     "\n",
     "    with open(os.path.join(base_dir, path, path + \".html\"), \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(\"<html><head><title>Watch List</title></head><body>\")\n",
     "        f.write(\"<table>\")\n",
     "        f.write(\"<tr><th>StartTime</th><th>Video1</th><th>VGA</th><th>Video1</th><th>VGA</th></tr>\")\n",
     "        for video_info in video_infos:\n",
-    "            start_time = video_info[\"StartTime\"]\n",
-    "            start_time = start_time.replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
-    "            vga_in_url = f\"{base_urls['in']}/{path}/{start_time}_VGA.mp4\"\n",
-    "            video1_in_url = f\"{base_urls['in']}/{path}/{start_time}.Video1.mp4\"\n",
-    "            vga_out_url = f\"{base_urls['out']}/{path}/{start_time}_VGA.mp4\"\n",
-    "            video1_out_url = f\"{base_urls['out']}/{path}/{start_time}.Video1.mp4\"\n",
-    "            subtitle_in_url = f\"{base_urls['in']}/{path}/{start_time}.Video1.json\"\n",
-    "            subtitle_out_url = f\"{base_urls['out']}/{path}/{start_time}.Video1.json\"\n",
-    "            base_url = website\n",
-    "            f.write(f\"<tr><td>{start_time}</td><td><a href='{base_url}?video={video1_in_url}&subtitle={subtitle_in_url}' target='_blank'>Video1</a></td><td><a href='{base_url}?video={vga_in_url}&subtitle={subtitle_in_url}' target='_blank'>VGA</a></td><td><a href='{base_url}?video={video1_out_url}&subtitle={subtitle_out_url}' target='_blank'>Video1</a></td><td><a href='{base_url}?video={vga_out_url}&subtitle={subtitle_out_url}' target='_blank'>VGA</a></td></tr>\")\n",
+    "            start_time = video_info[\"StartTime\"].replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
+    "            write_table_row(f, start_time, \"html\")\n",
     "        f.write(\"</table>\")\n",
     "        f.write(\"</body></html>\")\n"
    ]
