chore: 使用 PIL 库打开图片;自动创建文件夹

--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,10 +12,9 @@
     "import requests\n",
     "import time\n",
     "import base64\n",
-    "import cv2\n",
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
     "import aria2p\n",
-    "import tkinter as tk\n",
-    "from tkinter import simpledialog\n",
     "import concurrent.futures\n",
     "import urllib\n",
     "\n",
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,16 +91,20 @@
     "    verfyimg = json.loads(verfycodejson)[\"Value\"][\"img\"]\n",
     "    verfycode = json.loads(verfycodejson)[\"Value\"][\"Code\"]\n",
     "    verfyimg = \"data:image/png;base64,\" + verfyimg\n",
-    "    with open(\"verifyimg.png\", \"wb\") as f:\n",
-    "        f.write(base64.b64decode(verfyimg.split(\",\")[1]))\n",
-    "    image = cv2.imread(\"verifyimg.png\")\n",
-    "    cv2.imshow(\"Verification Code\", image)\n",
-    "    root = tk.Tk()\n",
-    "    root.withdraw()\n",
-    "    code = simpledialog.askstring(\"Input Code\", \"Please enter the verification code:\")\n",
-    "    cv2.destroyAllWindows()\n",
-    "    os.remove(\"verifyimg.png\")\n",
+    "    # 将 base64 编码的图片数据转换为二进制数据\n",
+    "    img_data = base64.b64decode(verfyimg.split(\",\")[1])\n",
     "\n",
+    "    # 使用 PIL 库打开图片\n",
+    "    img = Image.open(BytesIO(img_data))\n",
+    "\n",
+    "    # 显示验证码图片\n",
+    "    img.show()\n",
+    "\n",
+    "    # 获取用户输入的验证码\n",
+    "    code = input(\"Please enter the verification code: \")\n",
+    "\n",
+    "    # 关闭图片窗口\n",
+    "    img.close()\n",
     "    url = \"https://buct.smartclass.cn/Home/Login\"\n",
     "    data = {\n",
     "        \"UserName\": username,\n",
@@ -126,17 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Login successful using saved cookies.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 读取配置文件\n",
     "with open('config.yaml', 'r', encoding='utf-8') as f:\n",
@@ -204,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,6 +317,10 @@
     "def write_watch_list(video_infos):\n",
     "    title = video_infos[0][\"Title\"]\n",
     "    path = title.split(\" \")[0] + \"-\" + title.split(\" \")[1]\n",
+    "\n",
+    "    # if path not exists, create it\n",
+    "    if not os.path.exists(os.path.join(base_dir, path)):\n",
+    "        os.makedirs(os.path.join(base_dir, path))\n",
     "    \n",
     "    def format_url(video_type, in_out, start_time):\n",
     "        video_url = urllib.parse.quote(f\"{base_urls[in_out]}/{path}/{start_time}.{video_type}.mp4\")\n",
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
