Add m3u8 getter and better format for video player

--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import ruamel.yaml\n",
     "import os\n",
+    "import re\n",
     "import requests\n",
     "import time\n",
     "import base64\n",
@@ -17,13 +18,15 @@
     "import aria2p\n",
     "import concurrent.futures\n",
     "import urllib\n",
+    "import filecmp\n",
+    "\n",
     "\n",
     "yaml = ruamel.yaml.YAML()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +158,7 @@
     "    response_data = json.loads(response.text)\n",
     "    if response_data.get(\"Success\"):\n",
     "        print(\"Login successful.\")\n",
+    "        session.cookies.update(cookies)\n",
     "        save_cookies_to_yaml(session)\n",
     "        return session\n",
     "    else:\n",
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,10 +324,11 @@
     "        # download video\n",
     "        print(f\"Downloading {title}...\")\n",
     "        aria2.add_uris([video1_url], options={\"dir\": download_path, \"out\": start_time + \".Video1.mp4\"})\n",
-    "\n",
     "def write_watch_list(video_infos):\n",
-    "    title = video_infos[0][\"Title\"]\n",
+    "    title = video_infos[0][\"Title\"] # sample: 流体力学及传热学基础 马秀清 A-102 2024-02-26 08:00:00-08:45:00\n",
+    "    year_month = re.search(r\"\\d{4}-\\d{2}\", title).group(0)\n",
     "    path = title.split(\" \")[0] + \"-\" + title.split(\" \")[1]\n",
+    "    name = title.split(\" \")[0] + \"-\" + title.split(\" \")[1] + year_month[2:]\n",
     "\n",
     "    # if path not exists, create it\n",
     "    if not os.path.exists(os.path.join(base_dir, path)):\n",
@@ -345,43 +350,124 @@
     "        else:\n",
     "            f.write(f\"<tr><td>{start_time}</td><td><a href='{video1_in_url}' target='_blank'>Video1</a></td><td><a href='{vga_in_url}' target='_blank'>VGA</a></td><td><a href='{video1_out_url}' target='_blank'>Video1</a></td><td><a href='{vga_out_url}' target='_blank'>VGA</a></td></tr>\\n\")\n",
     "\n",
-    "    with open(os.path.join(base_dir, path, path + \".md\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    # Specify the file paths\n",
+    "    md_file_path = os.path.join(base_dir, path, name + \".md\")\n",
+    "    html_file_path = os.path.join(base_dir, path, name + \".html\")\n",
+    "\n",
+    "    with open(md_file_path + \".tmp\", \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(\"| StartTime | Video1 | VGA | Video1 | VGA |\\n\")\n",
     "        f.write(\"| --- | --- | --- | --- | --- |\\n\")\n",
     "        for video_info in video_infos:\n",
     "            start_time = video_info[\"StartTime\"].replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
     "            write_table_row(f, start_time, \"md\")\n",
+    "    \n",
+    "    if not os.path.exists(md_file_path):\n",
+    "        # create an empty file\n",
+    "        open(md_file_path, \"w\", encoding=\"utf-8\").close()\n",
     "\n",
-    "    with open(os.path.join(base_dir, path, path + \".html\"), \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(\"<html><head><title>Watch List</title></head><body>\")\n",
-    "        f.write(\"<table>\")\n",
-    "        f.write(\"<tr><th>StartTime</th><th>Video1</th><th>VGA</th><th>Video1</th><th>VGA</th></tr>\")\n",
-    "        for video_info in video_infos:\n",
-    "            start_time = video_info[\"StartTime\"].replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
-    "            write_table_row(f, start_time, \"html\")\n",
-    "        f.write(\"</table>\")\n",
-    "        f.write(\"</body></html>\")\n"
+    "    # Compare the new file with the old file\n",
+    "    if not filecmp.cmp(md_file_path, md_file_path + \".tmp\"):\n",
+    "        # rm the old file\n",
+    "        if os.path.exists(md_file_path):\n",
+    "            os.remove(md_file_path)\n",
+    "        # Rename the new file\n",
+    "        os.rename(md_file_path + \".tmp\", md_file_path)\n",
+    "\n",
+    "        with open(html_file_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(\"<html><head><title>Watch List</title></head><body>\")\n",
+    "            f.write(\"<table>\")\n",
+    "            f.write(\"<tr><th>StartTime</th><th>Video1</th><th>VGA</th><th>Video1</th><th>VGA</th></tr>\")\n",
+    "            for video_info in video_infos:\n",
+    "                start_time = video_info[\"StartTime\"].replace(\":\", \"-\").replace(\" \", \"_\")[:-3][2:]\n",
+    "                write_table_row(f, start_time, \"html\")\n",
+    "            f.write(\"</table>\")\n",
+    "            f.write(\"</body></html>\")\n",
+    "\n",
+    "def write_live_watch_list():\n",
+    "    token = get_csrf_token()\n",
+    "    start_date = time.strftime(\"%Y-%m-%d\", time.localtime()) # today\n",
+    "    end_date = time.strftime(\"%Y-%m-%d\", time.localtime(time.time() + 7 * 24 * 60 * 60))\n",
+    "    url = f\"https://buct.smartclass.cn/Webapi/V1/Live/GetMyLiveList?csrkToken={token}&MajorUserID=&ClassroomID=&Sort=IsLiving%20desc%2CIsCompleted%2CStartTime&StartDate={start_date}%2000%3A00%3A00&EndDate={end_date}%2023%3A59%3A59&Order=1&PageSize=100&PageNumber=1&attribute=&IncludePublic=true\"\n",
+    "    response = session.get(url)\n",
+    "    live_list = json.loads(response.text)\n",
+    "    \n",
+    "    live_info_list = {}\n",
+    "    for live_info in live_list[\"Value\"][\"Data\"]:\n",
+    "        ScheduleId = live_info[\"ScheduleID\"]\n",
+    "        live_info_list.update({ScheduleId: get_live_info(ScheduleId)})\n",
+    "    live_info_list_by_id = {}\n",
+    "    for key, value in live_info_list.items():\n",
+    "        id = value[\"Value\"][\"LanLiveMainRtmpSourceStreamNames\"][0].split(\"/\")[-1].split(\"_\")[0]\n",
+    "        live_info_list_by_id.update({id: value})\n",
+    "\n",
+    "    # sort the live_info_list_by_id by StartTime\n",
+    "    live_info_list_by_id = dict(sorted(live_info_list_by_id.items(), key=lambda item: item[1][\"Value\"][\"StartTime\"]))\n",
+    "    live_info_list_by_id\n",
+    "    for key, value in live_info_list_by_id.items():\n",
+    "        classroom = re.search(r\"[ABCD](?:阶)?-\\d{3}\", value[\"Value\"][\"Title\"]).group(0)\n",
+    "        # 计算周几\n",
+    "        week_num = time.strptime(value['Value']['StartTime'].split(' ')[0], \"%Y-%m-%d\").tm_wday\n",
+    "        week = [\"周一\", \"周二\", \"周三\", \"周四\", \"周五\", \"周六\", \"周日\"][week_num]\n",
+    "        Name = week  + \" \"+ value['Value']['StartTime'].split(' ')[1][:-3] + \"|\"+  value[\"Value\"][\"Title\"].split(classroom)[0].strip()\n",
+    "        # 写回到live_info_list_by_id\n",
+    "        live_info_list_by_id[key].update({\"Name\": Name})\n",
+    "        live_info_list_by_id[key].update({\"Classroom\": classroom})\n",
+    "        live_info_list_by_id[key].update({\"Week\": week})\n",
+    "        live_info_list_by_id[key].update({\"week_num\": week_num})\n",
+    "\n",
+    "    # sort the live_info_list_by_id by week_num\n",
+    "    live_info_list_by_id = dict(sorted(live_info_list_by_id.items(), key=lambda item: item[1][\"week_num\"]))\n",
+    "\n",
+    "    with open(os.path.join(base_dir, \"live_watch_list.m3u8\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "        for key, value in live_info_list_by_id.items():\n",
+    "            # write to m3u8\n",
+    "            for url in value[\"Value\"][\"LanLiveMainRtmpSourceStreamNames\"]:\n",
+    "                f.write(f\"#EXTINF:-1,{value['Name']} - {url.split('/')[-1].split('.')[0].split('_')[1]}\\n\")\n",
+    "                f.write(url + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "course_list = get_course_list()\n",
     "futures = []\n",
-    "for course_info in course_list[\"Value\"][\"Data\"]:\n",
-    "    video_list = get_course_videos(course_info)\n",
-    "    write_watch_list(video_list[\"Value\"][\"Data\"])\n",
     "\n",
     "with concurrent.futures.ThreadPoolExecutor(max_workers=16) as executor:\n",
     "    for course_info in course_list[\"Value\"][\"Data\"]:\n",
     "        video_list = get_course_videos(course_info)\n",
     "        write_watch_list(video_list[\"Value\"][\"Data\"])\n",
     "        for video_info in video_list[\"Value\"][\"Data\"]:\n",
+    "            # download video only within 150 days\n",
+    "            if video_info[\"StartTime\"] < time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime() - 150 * 24 * 60 * 60):\n",
+    "                continue\n",
     "            future = executor.submit(download_video, video_info)\n",
-    "            futures.append(future)"
+    "            futures.append(future)\n",
+    "\n",
+    "def get_live_info(ScheduleId):\n",
+    "    token = get_csrf_token()\n",
+    "    url = \"https://buct.smartclass.cn/Live/GetLiveStreamInfo\"\n",
+    "    # 文本表单 ScheduleId={ScheduleID}\n",
+    "    data = {\n",
+    "        \"ScheduleId\": ScheduleId\n",
+    "    }\n",
+    "    response = session.post(url, data=data)\n",
+    "    live_info = json.loads(response.text)\n",
+    "    # {'Success': True, 'Message': None, 'Value': {'ScheduleId': 25165373, 'Title': '形势与政策（III） 冯迅华 A阶-202 2024-05-10 16:30:00-17:15:00', 'MajorUserId': 137077, 'MajorUserName': '冯迅华', 'ImageFileUri': None, 'Code': 'True', 'CodeTime': '', 'LiveId': 'c59e6e35af8544978a73109ce71610c3', 'LiveTargetStreamNames': None, 'LanLiveMainRtmpSourceStreamNames': ['rtmp://10.4.144.220:1935/live/13705_VGA', 'rtmp://10.4.144.220:1935/live/13705_Video1'], 'LanLiveSubRtmpSourceStreamNames': ['rtmp://10.4.144.220:1935/live/13705_VGASub', 'rtmp://10.4.144.220:1935/live/13705_Video1Sub'], 'LanLiveMainHttpSourceStreamNames': ['http://10.4.144.220:83/live/13705_VGA.m3u8', 'http://10.4.144.220:83/live/13705_Video1.m3u8'], 'LanLiveSubHttpSourceStreamNames': ['http://10.4.144.220:83/live/13705_VGASub.m3u8', 'http://10.4.144.220:83/live/13705_Video1Sub.m3u8'], 'LanLiveMainFlvSourceStreamNames': ['http://10.4.144.220:83/live/13705_VGA.flv', 'http://10.4.144.220:83/live/13705_Video1.flv'], 'LanLiveSubFlvSourceStreamNames': ['http://10.4.144.220:83/live/13705_VGASub.flv', 'http://10.4.144.220:83/live/13705_Video1Sub.flv'], 'WanLiveMainRtmpSourceStreamNames': [], 'WanLiveSubRtmpSourceStreamNames': [], 'WanLiveMainHttpSourceStreamNames': [], 'WanLiveSubHttpSourceStreamNames': [], 'WanLiveMainFlvSourceStreamNames': [], 'WanLiveSubFlvSourceStreamNames': [], 'LiveType': 0, 'LiveVideos': '1,0', 'LiveChannels': '1,2', 'LiveTypes': 2, 'Address': '139.129.92.15', 'Port': '8001', 'WssAddress': 'wss://www.smartclass.cn:18001', 'SchoolId': 289, 'Summary': None, 'StartTime': '2024-05-10 16:30:00', 'EndTime': '2024-05-10 17:15:00', 'IsTemporary': False, 'ImagePath': None, 'LivePassword': None, 'HttpsAddress': 'https://buctls220.smartclass.cn:1936', 'HasLivePassword': False, 'IsPublic': False}}\n",
+    "    return live_info\n",
+    "\n",
+    "write_live_watch_list()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "useable api\n",
+    "https://www.smartclass.cn/Schedule/GetSchedule?id=27777480\n",
+    "https://buct.smartclass.cn/Video/GetVideoInfoDtoByID?NewId=79d07961a4964f0cb5f8aff757267cc3"
    ]
   }
  ],
