chore: use ddddocr to ocr, and only download last 10 day

--- a/haiku.ipynb
+++ b/haiku.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import concurrent.futures\n",
     "import urllib\n",
     "import filecmp\n",
+    "import ddddocr\n",
     "\n",
     "\n",
     "yaml = ruamel.yaml.YAML()"
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,17 +133,12 @@
     "    # 将 base64 编码的图片数据转换为二进制数据\n",
     "    img_data = base64.b64decode(verfyimg.split(\",\")[1])\n",
     "\n",
-    "    # 使用 PIL 库打开图片\n",
-    "    img = Image.open(BytesIO(img_data))\n",
+    "    # 使用 ddddocr 进行验证码识别\n",
+    "    ocr = ddddocr.DdddOcr(show_ad=False)\n",
+    "    result = ocr.classification(img_data)\n",
+    "    code = result.strip()\n",
+    "    print(f\"Recognized verification code: {code}\")\n",
     "\n",
-    "    # 显示验证码图片\n",
-    "    img.show()\n",
-    "\n",
-    "    # 获取用户输入的验证码\n",
-    "    code = input(\"Please enter the verification code: \")\n",
-    "\n",
-    "    # 关闭图片窗口\n",
-    "    img.close()\n",
     "    url = \"https://buct.smartclass.cn/Home/Login\"\n",
     "    data = {\n",
     "        \"UserName\": username,\n",
@@ -168,17 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Login successful using saved cookies.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 如果PowerCreatorCMSAuthenticationID和platform_token都设置，则不需要账号密码\n",
     "if PowerCreatorCMSAuthenticationID and platform_token:\n",
@@ -213,12 +201,13 @@
     "        yaml.dump(config, f)\n",
     "\n",
     "# 登录\n",
+    "session0 = login()\n",
     "session = login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,12 +431,12 @@
     "            # write to m3u8\n",
     "            for url in value[\"Value\"][\"LanLiveMainRtmpSourceStreamNames\"]:\n",
     "                f.write(f\"#EXTINF:-1,{value['Name']} - {url.split('/')[-1].split('.')[0].split('_')[1]}\\n\")\n",
-    "                f.write(url + \"\\n\")"
+    "                f.write(url + \"\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +449,9 @@
     "        write_watch_list(video_list[\"Value\"][\"Data\"])\n",
     "        for video_info in video_list[\"Value\"][\"Data\"]:\n",
     "            # download video only within 150 days\n",
-    "            if video_info[\"StartTime\"] < time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime() - 150 * 24 * 60 * 60):\n",
+    "\n",
+    "            # if video_info[\"StartTime\"] < time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime() - 150 * 24 * 60 * 60): TypeError: unsupported operand type(s) for -: 'time.struct_time' and 'int'\n",
+    "            if video_info[\"StartTime\"] < time.strftime(\"%Y-%m-%d %H:%M:%S\", time.localtime(time.time() - 10 * 24 * 60 * 60)):\n",
     "                continue\n",
     "            future = executor.submit(download_video, video_info)\n",
     "            futures.append(future)\n",
@@ -494,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
